# rm_detection

./: CMakeLists.txt  README.md  nodelet_rm_detection_dl.xml  package.xml
include/rm_detection_dl/: detection_dl.h
ir_file/: 8000.mapping  8000.xml
launch/: rm_detection_dl.launch
src/: detection_dl.cpp  detection_dl_node.cpp
