<?xml version="1.0"?>
<package format="2">
  <name>rm_detection_dl</name>
  <version>0.0.0</version>
  <description>The rm_detection_dl package</description>

  <maintainer email="LHT13535837097@163.com">lihanting</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_rm_detection_dl.xml" />
  </export>

</package>
